--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -35,8 +35,8 @@
 
     <div class="container">
         <header>
-            <h3 class="text-muted">Messages</h3>
             <ul class="nav nav-pills">
+                <li><a href="/index">Home</a></li>
                 <li><a href="/list">List</a></li>
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Manage</a></li>
