--- a/server/Views/List.html
+++ b/server/Views/List.html
@@ -31,9 +31,9 @@
 
     <div class="container">
         <header>
-            <h3 class="text-muted">Messages</h3>
             <ul class="nav nav-pills">
-                <li class="active"><a href="/list">List</a></li>
+                <li><a href="/index">Home</a></li>
+                <li><a href="/list">List</a></li>
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Manage</a></li>
                 <li><a href="/Screens">Screens</a></li>
