--- a/server/Views/ScreensManagement.html
+++ b/server/Views/ScreensManagement.html
@@ -35,11 +35,11 @@
 
 
     <header>
-        <h3 class="text-muted">Messages</h3>
         <ul class="nav nav-pills">
+            <li><a href="/index">Home</a></li>
             <li><a href="/list">List</a></li>
             <li><a href="/Create">Create</a></li>
-            <li class="active"><a href="/ScreensManagement">Manage</a></li>
+            <li><a href="/ScreensManagement">Manage</a></li>
             <li><a href="/Screens">Screens</a></li>
             <li><a href="/Templates">Templates</a></li>
             <li><a href="/Statistics">Statistics</a></li>
