--- a/server/Views/Item.html
+++ b/server/Views/Item.html
@@ -38,7 +38,7 @@
                 <li><a href="/index">Home</a></li>
                 <li><a href="/list">List</a></li>
                 <li><a href="/Create">Create</a></li>
-                <li><a href="/ScreensManagement">Manage</a></li>
+                <li><a href="/ScreensManagement">Simulate</a></li>
                 <li><a href="/Screens">Screens</a></li>
                 <li><a href="/Templates">Templates</a></li>
                 <li><a href="/Statistics">Statistics</a></li>
