new display to templates

--- a/server/Views/Index.html
+++ b/server/Views/Index.html
@@ -80,7 +80,7 @@
 </div>
 </body>
 <footer>
-    <div id="temperatureDiv">
+    <div id="temperatureDiv" class="container">
         <h4>Weather</h4>
         <p>geting info...</p>
     </div>
