--- a/server/Views/Templates.html
+++ b/server/Views/Templates.html
@@ -7,6 +7,24 @@
     <script type="text/javascript" src="/javascripts/Graphs/angular-fusioncharts.min.js"></script>
     <script type="text/javascript" src="/javascripts/checklist-model.js"></script>
     <link rel="stylesheet" type="text/css" href="/Bootstrap/bootstrap/dist/css/bootstrap.css" />
+
+
+    <!--<script src="/Bootstrap/hammerjs/hammer.min.js"></script>-->
+    <!-- Angular Material requires Angular.js Libraries -->
+
+    <script src="/Bootstrap/angular-animate/angular-animate.min.js"></script>
+    <script src="/Bootstrap/angular-aria/angular-aria.min.js"></script>
+    <script src="/Bootstrap/angular-messages/angular-messages.min.js"></script>
+    <script src="/Bootstrap/angular-material/angular-material.js"></script>
+
+
+    <!-- default themes and core styles -->
+    <link rel="stylesheet" href="/Bootstrap/angular-material/angular-material.css">
+    <link rel="stylesheet" href="/stylesheets/Templates.css">
+    <!-- extra, overriding theme files -->
+    <!--<link rel="stylesheet" href="/Bootstrap/angular-material/themes/indigo-theme.css">-->
+    <!--<link rel="stylesheet" href="/Bootstrap/angular-material/themes/green-theme.css">-->
+
     <script type="text/javascript" src="/javascripts/display.js"></script>
     <!--<script type="text/javascript" src="/Bootstrap/angular-file-upload/dist/angular-file-upload.js"></script>-->
     <!--<script type="text/javascript" src="/Bootstrap/angular-file-upload/dist/angular-file-upload.min.js"></script>-->
@@ -34,6 +52,9 @@
 </head>
 <body ng-controller="TemplatesCtrl">
 
+
+
+
     <div class="container">
         <header>
             <ul class="nav nav-pills">
@@ -51,31 +72,27 @@
         <div class="jumbotron">
             <h1>Templates:</h1>
         </div>
-
-        <h2>Templates:</h2>
         <br>
+        <div layout="column" ng-cloak style="height: 100%">
+            <md-content class="md-padding">
+                <md-tabs md-selected="selectedIndex" md-border-bottom md-autoselect>
+                    <md-tab ng-repeat="template in TemplatesTabs"
+                            ng-disabled="template.disabled"
+                            label="{{template.title}}">
+
+                        <md-content class="md-padding">
+                            <xmp ng-bind="template.content" style="height: auto"></xmp>
+                        </md-content>
+
+                        <md-button class="md-primary md-raised" ng-click="removeTab(template)" ng-disabled="template.length <= 1">Remove template</md-button>
+                    </md-tab>
+                </md-tabs>
+            </md-content>
+        </div>
+
 
         <div id="editDelete" class="col-sm-12 form-inline" ng-hide="isEditMode">
             <button class="form-control btn btn-default" ngf-select="upload($files)">Upload template</button>
-            <button class="form-control" ng-click="deleteTemplate(currentTemplate)" ng-Disabled="!isShowMode">Delete</button>
-            <label class="">{{currentTemplate.path}}</label>
-        </div>
-
-        <!--
-        <div id="saveCancel" class="col-sm-12 form-inline"  ng-hide="!isEditMode">
-            <button class="form-control" style="width:80px;" ng-click="">Save</button>
-            <button class="form-control" style="width:80px;" ng-click="cancelShow()">Cancel</button>
-            <label class="">{{currentTemplate.path}}</label>
-        </div>
-        -->
-        <div class="col-sm-10">
-        <textarea id="templateHtml" class="form-control" style="border: 1px black solid; height: 400px;" rows="5" ng-Disabled="!isEditMode">
-        </textarea>
-        </div>
-
-        <div class="col-sm-2"></div>
-        <div ng-repeat="template in Templates" class="col-sm-2">
-               <button class="form-control" style="margin: 5px;" ng-click="showTemplate(template)" ng-Disabled="isEditMode">{{template.path}}</button>
         </div>
 
         <div id="chanegsSaved" class="modal fade" role="dialog">
