--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -8,6 +8,13 @@
     <script type="text/javascript" src="/javascripts/checklist-model.js"></script>
     <link rel="stylesheet" type="text/css" href="/Bootstrap/bootstrap/dist/css/bootstrap.css" />
     <script type="text/javascript" src="/javascripts/display.js"></script>
+    <script src="/Bootstrap/angular-animate/angular-animate.min.js"></script>
+    <script src="/Bootstrap/angular-aria/angular-aria.min.js"></script>
+    <script src="/Bootstrap/angular-messages/angular-messages.min.js"></script>
+    <script src="/Bootstrap/angular-material/angular-material.js"></script>
+    <link rel="stylesheet" href="/Bootstrap/angular-material/angular-material.css">
+    <link rel="stylesheet" href="/stylesheets/Templates.css">
+    <!-- extra, overriding theme files -->
     <!--<script type="text/javascript" src="/Bootstrap/angular-file-upload/dist/angular-file-upload.js"></script>-->
     <!--<script type="text/javascript" src="/Bootstrap/angular-file-upload/dist/angular-file-upload.min.js"></script>-->
     <script type="text/javascript" src="/Bootstrap/ng-file-upload/ng-file-upload.js"></script>
