--- a/server/Views/Item.html
+++ b/server/Views/Item.html
@@ -10,6 +10,13 @@
     <script type="text/javascript" src="/Bootstrap/ng-file-upload/ng-file-upload.js"></script>
     <script type="text/javascript" src="/Bootstrap/ng-file-upload/ng-file-upload-shim.js"></script>
     <script type="text/javascript" src="/javascripts/display.js"></script>
+    <script src="/Bootstrap/angular-animate/angular-animate.min.js"></script>
+    <script src="/Bootstrap/angular-aria/angular-aria.min.js"></script>
+    <script src="/Bootstrap/angular-messages/angular-messages.min.js"></script>
+    <script src="/Bootstrap/angular-material/angular-material.js"></script>
+    <link rel="stylesheet" href="/Bootstrap/angular-material/angular-material.css">
+    <link rel="stylesheet" href="/stylesheets/Templates.css">
+    <!-- extra, overriding theme files -->
     <script type="text/javascript" src="/Bootstrap/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="/Bootstrap/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="/javascripts/socket.io-client/socket.io.js"></script>
