--- a/server/Views/Screens.html
+++ b/server/Views/Screens.html
@@ -46,7 +46,7 @@
                 <li><a href="/list">List</a></li>
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Simulate</a></li>
-                <li><a href="/Screens">Screens</a></li>
+                <li class="active"><a href="/Screens">Screens</a></li>
                 <li><a href="/Templates">Templates</a></li>
                 <li><a href="/Statistics">Statistics</a></li>
                 <li><a href="/About">About</a></li>
