--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -45,7 +45,7 @@
         <ul class="nav nav-pills">
             <li><a href="/index">Home</a></li>
             <li><a href="/list">List</a></li>
-            <li><a href="/Create">Create</a></li>
+            <li class="active"><a href="/Create">Create</a></li>
             <li><a href="/ScreensManagement">Simulate</a></li>
             <li><a href="/Screens">Screens</a></li>
             <li><a href="/Templates">Templates</a></li>
@@ -56,25 +56,25 @@
     <div class="jumbotron">
         <h1>Create message</h1>
     </div>
-    <form class="form-horizontal" role="form">
+    <form class="form-horizontal" role="form" ng-submit="addMessage()">
         <div class="form-group">
             <label class="control-label col-sm-2">Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="Message.name">
+                <input type="text" class="form-control" ng-model="Message.name" required>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2">Template</label>
             <div class="col-sm-10">
                 <select class="form-control" ng-model="Message.template">
-                    <option ng-repeat="template in Templates" ng-value="template.path">{{template.path}}</option>
+                    <option ng-repeat="template in Templates" ng-value="template.path" required >{{template.path}}</option>
                 </select>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2">Display Time (milliseconds)</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec">
+                <input type="number" min="1" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec">
             </div>
         </div>
         <div class="form-group">
@@ -139,19 +139,19 @@
                 <div class="form-group" id="TimeFrame">
                     <label class="control-label col-sm-2">From date:</label>
                     <div class="col-sm-4">
-                        <input type="date" class="form-control" ng-model="timeFrame.FromDate" placeholder="dd-MM-yyyy">
+                        <input type="date" class="form-control" ng-model="timeFrame.FromDate" placeholder="dd-MM-yyyy" required>
                     </div>
                     <label class="control-label col-sm-2">To date:</label>
                     <div class="col-sm-4">
-                        <input type="date" class="form-control" ng-model="timeFrame.ToDate" placeholder="dd-MM-yyyy">
+                        <input type="date" class="form-control" ng-model="timeFrame.ToDate" placeholder="dd-MM-yyyy" required>
                     </div>
                     <label class="control-label col-sm-2">From time:</label>
                     <div class="col-sm-4">
-                        <input type="time" class="form-control" ng-model="timeFrame.FromTime" placeholder="HH:mm:ss">
+                        <input type="time" class="form-control" ng-model="timeFrame.FromTime" placeholder="HH:mm:ss" required>
                     </div>
                     <label class="control-label col-sm-2">To time:</label>
                     <div class="col-sm-4">
-                        <input type="time" class="form-control" ng-model="timeFrame.ToTime" placeholder="HH:mm:ss">
+                        <input type="time" class="form-control" ng-model="timeFrame.ToTime" placeholder="HH:mm:ss" required>
                     </div>
                     <label class="control-label col-sm-2">Days:</label>
                     <div class="form-group col-sm-10">
@@ -169,7 +169,7 @@
 
         <div class="form-group">
             <div class="btn btn-large btn-block">
-                <button type="submit" ng-click="addMessage()" class="btn btn-default">Create</button>
+                <button type="submit" class="btn btn-default" ng-disabled="validation()">Create</button>
             </div>
         </div>
     </form>
