--- a/server/Views/About.html
+++ b/server/Views/About.html
@@ -49,7 +49,7 @@
             <li><a href="/Screens">Screens</a></li>
             <li><a href="/Templates">Templates</a></li>
             <li><a href="/Statistics">Statistics</a></li>
-            <li><a href="/About">About</a></li>
+            <li class="active"><a href="/About">About</a></li>
         </ul>
     </header>
 
