--- a/server/Views/Index.html
+++ b/server/Views/Index.html
@@ -43,7 +43,7 @@
 <div class="container">
     <header>
         <ul class="nav nav-pills">
-            <li><a href="/index">Home</a></li>
+            <li class="active"><a href="/index">Home</a></li>
             <li><a href="/list">List</a></li>
             <li><a href="/Create">Create</a></li>
             <li><a href="/ScreensManagement">Simulate</a></li>
