--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -74,7 +74,7 @@
         <div class="form-group">
             <label class="control-label col-sm-2">Display Time (milliseconds)</label>
             <div class="col-sm-10">
-                <input type="number" min="1" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec">
+                <input type="number" class="form-control" id="dispTimeSec" ng-model="Message.dispTimeSec" min="1">
             </div>
         </div>
         <div class="form-group">
