--- a/server/Views/Statistics.html
+++ b/server/Views/Statistics.html
@@ -44,7 +44,7 @@
             <li><a href="/ScreensManagement">Simulate</a></li>
             <li><a href="/Screens">Screens</a></li>
             <li><a href="/Templates">Templates</a></li>
-            <li><a href="/Statistics">Statistics</a></li>
+            <li class="active"><a href="/Statistics">Statistics</a></li>
             <li><a href="/About">About</a></li>
         </ul>
     </header>
