--- a/server/Views/Templates.html
+++ b/server/Views/Templates.html
@@ -60,7 +60,7 @@
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Simulate</a></li>
                 <li><a href="/Screens">Screens</a></li>
-                <li><a href="/Templates">Templates</a></li>
+                <li class="active"><a href="/Templates">Templates</a></li>
                 <li><a href="/Statistics">Statistics</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
